--- a/package.json
+++ b/package.json
@@ -6,12 +6,22 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@primevue/auto-import-resolver": "^4.2.1",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
+        "unplugin-vue-components": "^0.27.4",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@inertiajs/vue3": "^1.2.0",
+        "@primevue/themes": "^4.2.1",
+        "@vitejs/plugin-vue": "^5.1.4",
+        "primeicons": "^7.0.0",
+        "primevue": "^4.2.1",
+        "vue": "^3.5.12"
     }
 }
