--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-APP_NAME=Laravel
+APP_NAME="Médico de Família"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_LOCALE=pt_BR
+APP_FALLBACK_LOCALE=pt_BR
+APP_FAKER_LOCALE=pt_BR
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -64,3 +64,9 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+SMS_URL_ENVIA="https://api.smstoken.com.br/token/v1/verify"
+SMS_URL_CHECK="https://api.smstoken.com.br/token/v1/check"
+SMS_EXPIRE=600
+SMS_TEMPLATE="{999999}"
+SMS_KEY=
