--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^1.3",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "realrashid/sweet-alert": "^7.2"
+
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -18,7 +20,10 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
         "pestphp/pest": "^3.5",
-        "pestphp/pest-plugin-laravel": "^3.0"
+        "pestphp/pest-plugin-laravel": "^3.0",
+        "lucascudo/laravel-pt-br-localization": "^2.2",
+        "barryvdh/laravel-debugbar": "^3.6",
+        "laravel/telescope": "^5.1"
     },
     "autoload": {
         "psr-4": {
